# coccitools

./: CMakeLists.txt  doxygen.conf  licence.txt
lib/python/: configuration.py  utils.py
lib/python/coccitools/: __init__.py  cocci_check.py  cocci_create.py  cocci_delete.py  cocci_metrics.py  cocci_select.py  cocci_show.py
scripts/: createdirs.cmake
